# ble_provisioning

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md  idf_component.yml
include/: ble_provisioning.h  config.h  wifi_driver.h
python_tool/: README.md  ble_test.py
src/: ble_gatts_module.c  ble_gatts_module.h  ble_proto_parser.c  ble_proto_parser.h  ble_provisioning.c  config.c  wifi_driver.c
